# sysinfo

./: .envrc  .tasks  Cargo.toml  README.md  justfile
src/: cpu.rs  example.rs  load.rs  logger.rs  main.rs  memory.rs  temp.rs  uptime.rs
