[package]
name = "sysinfo"
version = "0.1.5"
authors = ["Nick Murphy <comfortablynick@gmail.com>"]
homepage = "github.com/comfortablynick/sysinfo"
description = "System stats for use in shell, TMUX, etc."
edition = "2018"

[dependencies]
log = "0.4"
getopts = "0.2"
systemstat = "0.1.5"
chrono = "0.4"
env_logger = "0.6.2"

[target.'cfg(target_os = "macos")'.dependencies]
sys-info = "0.5"
